# tripletfinder

./: LICENSE  README.html  README.md  pyproject.toml
.github/workflows/: python-publish.yml
tests/: test_triplets.py
triplet-finder/: __init__.py  cli.py  init.py  tripletfinder.py
triplet_finder/: __init__.py
tripletfinder/: __init__.py  cli.py  tripletfinder.py
