[project]
name = "tripletfinder"
version = "0.1.0"
description = "Identify spatial cell triplets within a distance threshold"
readme = "README.md"
authors = [
  { name="Dani V", email="dvait16@gmail.com" }
]
license = { text = "MIT" }

requires-python = ">=3.9"
dependencies = [
  "pandas",
  "numpy",
  "scipy"
]

[project.scripts]
tripletfinder = "triplet_finder.cli:main"
