[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "triplet-finder"
version = "0.2.0"
description = "Identify spatial cell triplets within a distance threshold"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Dani V", email = "dvait16@gmail.com" }
]
license = "MIT"
dependencies = [
  "pandas",
  "numpy",
  "scipy"
]

[project.scripts]
triplet-finder = "triplet_finder.cli:main"

[tool.setuptools]
packages = ["triplet_finder"]